ndb - bug#51027 (6.3.31a) - handle non-continious memory for IndexMemory and RedoBuffer